CustomRenderer and effects

--- a/DependencyServiceSample/DependencyServiceSample.Android/DependencyServiceSample.Android.csproj
+++ b/DependencyServiceSample/DependencyServiceSample.Android/DependencyServiceSample.Android.csproj
@@ -51,6 +51,9 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Numerics.Vectors" />
+    <Reference Include="Xamarin.iOS">
+      <HintPath>..\..\..\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\IDE\ReferenceAssemblies\Microsoft\Framework\Xamarin.iOS\v1.0\Xamarin.iOS.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="PropertyChanged.Fody">
@@ -60,8 +63,10 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomRendererEntry.cs" />
     <Compile Include="DeviceOrientationAndroid.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="MyPlatformEffects.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
